@@ -125,7 +125,7 @@ void* send_thread(void*)
 	  if (finished) 
 	    cout << "NOT POSSIBLE! " << endl;
           label_data* ld = (label_data*)ec->ld;
-          
+          set_minmax(ld->label);
           for (size_t i = 0; i < d_1; i++)
             for (size_t j = 0; j < d_2; j++)
               {
